# sample-flask-app

./: .gitignore  .gitpod.yml  .sops.yaml  Dockerfile  README.md  checks.sh  docker-compose.yaml  helmfile.yaml  load_db.sh  mysql-values-prod.yaml  prepare-environment.sh  pyproject.toml  secrets-dev.yaml  secrets-prod.yaml  secrets.env  secrets.yaml  secretsy.yaml  value.yaml  values-dev.yaml  values-mysql-shared.yaml  values-prod.yaml  values-shared.yaml
.GitHub/workflows/: release.yaml
.github/workflows/: main.yml  release.yml
db/: guestbook.sql
deploy/templates/: _helpers.tpl  artifactcred.yaml  deployment.yaml  ingress.yaml  mysqlsecrets.yaml  post-install.yaml  prom-collector.yaml
guestbook/: __init__.py  docker-compose.yaml  forms.py  gcorn.conf  gunicorn.py  models.py  myapp.py
guestbook/migrations/versions/: e40193d8e510_.py
guestbook/templates/: add_review.html  base.html  index.html  list_review.html
